--- a/ampunv_front/package.json
+++ b/ampunv_front/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^5.3.0",
+    "@stripe/stripe-js": "^8.4.0",
     "axios": "^1.13.2",
     "next": "16.0.1",
     "react": "19.2.0",
